# data-reliability-platform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  prefect.yaml  pyproject.toml  repo-health.json
.github/workflows/: ci.yml  daily-heartbeat.yml  pipeline-smoke.yml
docs/architecture/: platform-architecture.md
infra/docker/: api-generator.Dockerfile  pipeline.Dockerfile
ops/monitoring/: flow_health_queries.sql  runbook.md
scripts/: register-prefect-deployments.sh  run-full-pipeline.sh  run-ingest-flow.sh  run-stage-validate-flow.sh  start-prefect-worker.sh
scripts/ci/: run-quality-gate.sh
scripts/demo/: trigger-bad-data.sh
scripts/monitoring/: report-flow-health.sh
scripts/object-store/: list-artifacts.sh
src/drp/: __init__.py
src/drp/config/: settings.py
src/drp/core/: exceptions.py  logging.py
src/drp/ingestion/connectors/: __init__.py  orders_api_client.py
src/drp/ingestion/services/: __init__.py  orders_ingestion_service.py
src/drp/interfaces/: __init__.py
src/drp/interfaces/api/: __init__.py  main.py
src/drp/observability/: __init__.py  alerting.py  flow_monitor.py  run_audit_repository.py
src/drp/orchestration/prefect/: __init__.py
src/drp/quality/: __init__.py
src/drp/quality/great_expectations/: __init__.py  orders_quality_validator.py
src/drp/storage/: __init__.py
src/drp/transform/: __init__.py
tests/integration/: test_stage_quality_integration.py
tests/unit/: test_alert_notifier.py  test_object_store_archive_service.py  test_orders_api_client.py  test_orders_staging_service.py  test_settings.py
(+10 files in other folders)
